--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -32,6 +32,7 @@ UIScaleCurve=(EditorCurveData=(PreInfinityExtrap=RCCE_Constant,PostInfinityExtra
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/SubwayTrain/Maps/Demonstration.Demonstration
 GameDefaultMap=/Game/SubwayTrain/Maps/Demonstration.Demonstration
+GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
